--- a/Oxidize/Cargo.toml
+++ b/Oxidize/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "OXET"
+name = "OXIFETCH"
 version = "0.0.1"
 edition = "2021"
 
@@ -9,5 +9,5 @@ regex = "1.5"
 users = "0.11"
 
 [[bin]]
-name = "oxet"
+name = "oxifetch"
 path = "src/main.rs" 
