--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Rust
+      run: rustup update stable
+
+    - name: Change to correct directory
+      working-directory: OxiFetch
+
     - name: Build
       run: cargo build --verbose
 
